// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> test render with changeable（换一换） 1`] = `
<div
  nativeName="View"
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
    }
  }
>
  <p
    nativeName="Text"
    numberOfLines={1}
    style={
      Array [
        Object {
          "colors": Array [
            "#242424",
            "#686d74",
            "#242424",
            "white",
          ],
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
          "maxWidth": 252,
          "paddingBottom": 14,
          "paddingTop": 14,
        },
        Object {},
      ]
    }
    text="标题"
  >
    标题
  </p>
  <div
    className="change-view"
    nativeName="View"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingBottom": 14,
        "paddingTop": 14,
        "position": "relative",
      }
    }
  >
    <p
      nativeName="Text"
      numberOfLines={1}
      style={
        Array [
          Object {
            "colors": Array [
              "#000000",
              "#686D74",
              "#000000",
              "#ffffff",
            ],
            "fontSize": 12,
            "lineHeight": 16,
          },
          Object {},
        ]
      }
      text="换一换"
    >
      换一换
    </p>
  </div>
</div>
`;

exports[`<Title /> test render with right（右上角链接 + 红点） 1`] = `
<div
  nativeName="View"
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
    }
  }
>
  <p
    nativeName="Text"
    numberOfLines={1}
    style={
      Array [
        Object {
          "colors": Array [
            "#242424",
            "#686d74",
            "#242424",
            "white",
          ],
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
          "maxWidth": 252,
          "paddingBottom": 14,
          "paddingTop": 14,
        },
        Object {},
      ]
    }
    text=""
  >
    
  </p>
  <div
    className="right-view"
    nativeName="View"
    onClick={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "paddingBottom": 14,
        "paddingTop": 14,
        "position": "relative",
      }
    }
  >
    <div
      nativeName="View"
      style={
        Object {
          "alignItems": "center",
          "backgroundColors": Array [
            "#f55318",
            "#74322d",
          ],
          "borderRadius": 2.5,
          "height": 5,
          "justifyContent": "center",
          "marginRight": 5,
          "width": 5,
        }
      }
    />
    <p
      nativeName="Text"
      numberOfLines={1}
      style={
        Array [
          Object {
            "colors": Array [
              "#000000",
              "#686D74",
              "#000000",
              "#ffffff",
            ],
            "fontSize": 12,
            "lineHeight": 16,
          },
          Object {},
        ]
      }
      text="简介页"
    >
      简介页
    </p>
    <img
      alt=""
      nativeName="Image"
      noPicMode={
        Object {
          "enable": false,
        }
      }
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAA8AAAAbCAYAAACjkdXHAAAAAXNSR0IArs4c6QAAAERlWElmTU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAA6ABAAMAAAABAAEAAKACAAQAAAABAAAAD6ADAAQAAAABAAAAGwAAAACSVupLAAAA40lEQVQ4EZ1UOQ4CMQyMQDQ8iIqWJ3HDAhXiEJf2KZS0PAX2B7QwRrFkuZo40sheecZJ1nZSSmkDNMACKF5vKL4Z2xJ1G+QWMMiiPmwXeORvysjRdXexe0plSGv4NsHBxCi3cgmOlMqQli7BycQoV8pmr3CmVIY0cwkuJka5U5fgSqkMaeIS3EyMcscuQS0q6TBmPUH6ANqJPfgdRmg5d3xoFWSY6DUEU4Vi6SEaOeH/zsy24b8drnO4w+bujnRvh6cqPM8rd1T6JQm/Yb4cO6b4ypEe1bajW07F8uS8AOmkovUDoSNiNZ1r/OEAAAAASUVORK5CYII="
      style={
        Object {
          "height": 9,
          "marginLeft": 4,
          "tintColors": Array [
            "#000000",
            "#686D74",
            "#000000",
            "#ffffff",
          ],
          "width": 5,
        }
      }
    />
  </div>
</div>
`;

exports[`<Title /> test render with title 1`] = `
<div
  nativeName="View"
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
    }
  }
>
  <p
    nativeName="Text"
    numberOfLines={1}
    style={
      Array [
        Object {
          "colors": Array [
            "#242424",
            "#686d74",
            "#242424",
            "white",
          ],
          "fontSize": 16,
          "fontWeight": "bold",
          "lineHeight": 20,
          "maxWidth": 252,
          "paddingBottom": 14,
          "paddingTop": 14,
        },
        Object {},
      ]
    }
    text="标题"
  >
    标题
  </p>
</div>
`;
